# herald

./: Cargo.toml  assistant-fed2.toml  config.example.toml  result
.github/workflows/: release.yml
data-beta/sessions/federation/herald-alpha/: 6f131e74-14bb-4535-9e06-093731479491.json  c273cc00-b5d7-4bda-8653-0a185d417126.json
data-beta/sessions/web/: cfa87abb-e004-40eb-bf6c-701f27d4f679.json
src/: config.rs  discord_manager.rs  federation.rs  hooks.rs  identity.rs  job_monitor.rs  main.rs  provider_wrapper.rs  refreshable_provider.rs  thread.rs  tools.rs  update.rs  web.rs
src/federation/: api.rs  client.rs  tool.rs  tool_executor.rs
src/tools/: claude_code.rs
src/web/: handlers.rs  ws.rs
src/web/static/: index.html
