[package]
name = "agentic-assistant"
version = "0.2.0"
edition = "2021"
description = "A Discord-based AI assistant built on the agentic library"
license = "MIT"

[dependencies]
orra = { git = "https://github.com/jereanon/orra.git", features = [
    "claude",
    "openai",
    "discord",
    "gateway",
    "file-store",
    "parallel-tools",
    "documents",
    "mcp",
    "claude-code",
    "web-fetch",
    "web-search",
    "browser",
    "image-gen",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
rust-embed = "8"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
