[package]
name = "herald"
version = "0.0.8"
edition = "2021"
description = "A self-hostable AI assistant with web UI, Discord bot, scheduled tasks, and multi-agent support. Built on orra."
license = "MIT"

[dependencies]
orra = { git = "https://github.com/jereanon/orra.git", rev = "a5b3624", features = [
    "claude",
    "openai",
    "discord",
    "gateway",
    "file-store",
    "parallel-tools",
    "documents",
    "mcp",
    "claude-code",
    "web-fetch",
    "web-search",
    "browser",
    "image-gen",
    "federation",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
rust-embed = "8"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
hostname = "0.4"
mdns-sd = "0.11"
urlencoding = "2.1.3"
tokio-util = { version = "0.7", features = ["rt"] }
